--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,26 @@
 		<project.build.Encoding>UTF-8</project.build.Encoding>
 		<java.version>1.8</java.version>
 		<skipTests>true</skipTests>
+		<junit.version>4.12</junit.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 	</properties>
-
-
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.3.RELEASE</version>
+	</parent>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<!-- 设定主仓库，按设定顺序进行查找。 -->
 	<repositories>
 		<repository>
@@ -47,6 +64,10 @@
 				<configuration>
 					<charset>${project.build.Encoding}</charset>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
