--- a/bmall-user/pom.xml
+++ b/bmall-user/pom.xml
@@ -9,10 +9,18 @@
 	</parent>
 	<artifactId>bmall-user</artifactId>
 	<dependencies>
-		<!-- LOGGING begin -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+
+	</build>
 </project>
