--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+		<common.lang3.verson>3.4</common.lang3.verson>
+		<commons.collections.version>3.2.1</commons.collections.version>
+		<commons.lang.version>2.5</commons.lang.version>
+		<commons.io.version>2.5</commons.io.version>
+		<http.client.version>4.4.1</http.client.version>
+		<validator.version>6.0.10.Final</validator.version>
+		<alibaba.fastjson.version>1.2.49</alibaba.fastjson.version>
 	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -38,6 +45,65 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${common.lang3.verson}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>${commons.collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>${commons.lang.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons.io.version}</version>
+			</dependency>
+			<!-- httpclient start -->
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${http.client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>${http.client.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${http.client.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpmime</artifactId>
+				<version>${http.client.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${alibaba.fastjson.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+			<dependency>
+				<groupId>org.hibernate.validator</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${validator.version}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 	<!-- 设定主仓库，按设定顺序进行查找。 -->
@@ -64,10 +130,6 @@
 				<configuration>
 					<charset>${project.build.Encoding}</charset>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
