--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<mysql.connector.version>8.0.13</mysql.connector.version>
 		<mybatis.plus.version>3.1.0</mybatis.plus.version>
 		<swagger.version>2.9.2</swagger.version>
+		<druid.version>1.1.12</druid.version>
 	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -131,6 +132,12 @@
 				<groupId>io.springfox</groupId>
 				<artifactId>springfox-swagger2</artifactId>
 				<version>${swagger.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid</artifactId>
+				<version>${druid.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
