--- a/bmall-user/src/main/resources/application.properties
+++ b/bmall-user/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8001
-spring.application.name=user
+spring.application.name=service-user
 eureka.client.serviceUrl.defaultZone=http://106.12.204.95:8761/eureka/
 mybatis-plus.mapper-locations=classpath:/mybatis/*.xml
 mybatis-plus.type-handlers-package=cn.yh.pojo.eumn
