--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<commons.collections.version>3.2.1</commons.collections.version>
 		<commons.lang.version>2.5</commons.lang.version>
 		<commons.io.version>2.5</commons.io.version>
-		<http.client.version>4.4.1</http.client.version>
+		<!-- <http.client.version>4.5.5</http.client.version> -->
 		<validator.version>6.0.10.Final</validator.version>
 		<alibaba.fastjson.version>1.2.49</alibaba.fastjson.version>
 		<spring.boot.version>2.0.3.RELEASE</spring.boot.version>
@@ -76,6 +76,7 @@
 				<version>${commons.io.version}</version>
 			</dependency>
 			<!-- httpclient start -->
+			<!-- 
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
@@ -101,7 +102,7 @@
 				<version>${http.client.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
-			</dependency>
+			</dependency> -->
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
