--- a/pom.xml
+++ b/pom.xml
@@ -75,34 +75,22 @@
 				<artifactId>commons-io</artifactId>
 				<version>${commons.io.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${swagger.version}</version>
+			</dependency>
+
+
 			<!-- httpclient start -->
-			<!-- 
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpclient</artifactId>
-				<version>${http.client.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpcore</artifactId>
-				<version>${http.client.version}</version>
-				<type>jar</type>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpclient</artifactId>
-				<version>${http.client.version}</version>
-				<type>jar</type>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpmime</artifactId>
-				<version>${http.client.version}</version>
-				<type>jar</type>
-				<scope>compile</scope>
-			</dependency> -->
+			<!-- <dependency> <groupId>org.apache.httpcomponents</groupId> <artifactId>httpclient</artifactId> 
+				<version>${http.client.version}</version> </dependency> <dependency> <groupId>org.apache.httpcomponents</groupId> 
+				<artifactId>httpcore</artifactId> <version>${http.client.version}</version> 
+				<type>jar</type> <scope>compile</scope> </dependency> <dependency> <groupId>org.apache.httpcomponents</groupId> 
+				<artifactId>httpclient</artifactId> <version>${http.client.version}</version> 
+				<type>jar</type> <scope>compile</scope> </dependency> <dependency> <groupId>org.apache.httpcomponents</groupId> 
+				<artifactId>httpmime</artifactId> <version>${http.client.version}</version> 
+				<type>jar</type> <scope>compile</scope> </dependency> -->
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
