--- a/bmall-pojo/pom.xml
+++ b/bmall-pojo/pom.xml
@@ -25,5 +25,9 @@
 			<artifactId>bmall-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 </project>
