--- a/pom.xml
+++ b/pom.xml
@@ -19,50 +19,30 @@
 	<properties>
 		<project.build.Encoding>UTF-8</project.build.Encoding>
 		<java.version>1.8</java.version>
-		<skipTests>true</skipTests>
-		<junit.version>4.12</junit.version>
-		<slf4j.version>1.7.7</slf4j.version>
-		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<common.lang3.verson>3.4</common.lang3.verson>
-		<commons.collections.version>3.2.1</commons.collections.version>
-		<commons.lang.version>2.5</commons.lang.version>
-		<commons.io.version>2.5</commons.io.version>
-		<!-- <http.client.version>4.5.5</http.client.version> -->
-	<!-- 	<validator.version>6.0.10.Final</validator.version> -->
-		<alibaba.fastjson.version>1.2.49</alibaba.fastjson.version>
 		<spring.boot.version>2.0.3.RELEASE</spring.boot.version>
+		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<mysql.connector.version>8.0.13</mysql.connector.version>
 		<mybatis.plus.version>3.1.0</mybatis.plus.version>
 		<swagger.version>2.9.2</swagger.version>
 		<druid.version>1.1.12</druid.version>
-		<slf4j.version>1.7.7</slf4j.version>
+		<alibaba.fastjson.version>1.2.49</alibaba.fastjson.version>
 	</properties>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.3.RELEASE</version>
-	</parent>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>${common.lang3.verson}</version>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>commons-collections</groupId>
-				<artifactId>commons-collections</artifactId>
-				<version>${commons.collections.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-				<version>${commons.lang.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons.io.version}</version>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring.boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.springfox</groupId>
@@ -70,25 +50,9 @@
 				<version>${swagger.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>fastjson</artifactId>
-				<version>${alibaba.fastjson.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
-			<!-- <dependency>
-				<groupId>org.hibernate.validator</groupId>
-				<artifactId>hibernate-validator</artifactId>
-				<version>${validator.version}</version>
-			</dependency> -->
-			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.connector.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.baomidou</groupId>
-				<artifactId>mybatis-plus-boot-starter</artifactId>
-				<version>${mybatis.plus.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.springfox</groupId>
@@ -100,31 +64,16 @@
 				<artifactId>druid</artifactId>
 				<version>${druid.version}</version>
 			</dependency>
-
-			<!-- LOGGING begin -->
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${alibaba.fastjson.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>com.baomidou</groupId>
+				<artifactId>mybatis-plus-boot-starter</artifactId>
+				<version>${mybatis.plus.version}</version>
 			</dependency>
-			<!-- common-logging 实际调用slf4j -->
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<!-- java.util.logging 实际调用slf4j -->
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jul-to-slf4j</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<!-- LOGGING end -->
 		</dependencies>
 	</dependencyManagement>
 	<!-- 设定主仓库，按设定顺序进行查找。 -->
