--- a/bmall-zuul/pom.xml
+++ b/bmall-zuul/pom.xml
@@ -10,6 +10,11 @@
 	<artifactId>bmall-zuul</artifactId>
 	<dependencies>
 		<dependency>
+			<groupId>cn.yh.st</groupId>
+			<artifactId>bmall-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
@@ -20,6 +25,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
