--- a/bmall-backstage/src/main/resources/application.properties
+++ b/bmall-backstage/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+security.basic.enabled=true
+
+
+
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
