--- a/bmall-backstage/src/main/resources/application.properties
+++ b/bmall-backstage/src/main/resources/application.properties
@@ -17,3 +17,5 @@ security.basic.enabled=true
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 5000
