--- a/bmall-common/pom.xml
+++ b/bmall-common/pom.xml
@@ -23,7 +23,9 @@
 		</dependency>
 		<dependency>
 			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<artifactId>mybatis-plus</artifactId>
+			<version>3.1.0</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
