--- a/bmall-backstage/src/main/resources/application.properties
+++ b/bmall-backstage/src/main/resources/application.properties
@@ -18,4 +18,7 @@ security.basic.enabled=true
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 5000
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+ribbon.MaxAutoRetries=0
+ribbon.MaxAutoRetriesNextServer=1 
