--- a/bmall-backstage/pom.xml
+++ b/bmall-backstage/pom.xml
@@ -57,6 +57,11 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
