--- a/bmall-product/src/main/resources/application.properties
+++ b/bmall-product/src/main/resources/application.properties
@@ -23,7 +23,7 @@ druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=stat
 
 
-connection.url=jdbc:mysql://106.12.204.95:3306/mall?useUnicode=true&characterEncoding=utf8
+connection.url=jdbc:mysql://106.12.204.95:3306/mproduct?useUnicode=true&characterEncoding=utf8
 connection.username=root
 connection.password=yuhang123wo
 
