--- a/bmall-merchant/src/main/resources/application.properties
+++ b/bmall-merchant/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
-security.basic.enabled=true
 
 
 
@@ -28,3 +27,5 @@ spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size=100MB
 
 
+web.upload-path=E:/img
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
