--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<module>bmall-account</module>
 		<module>bmall-seller</module>
 		<module>bmall-merchant</module>
+		<module>bmall-search</module>
 	</modules>
 	<!-- 配置变量 -->
 	<properties>
