--- a/bmall-common/pom.xml
+++ b/bmall-common/pom.xml
@@ -27,5 +27,9 @@
 			<version>3.1.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+		</dependency>
 	</dependencies>
 </project>
