--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -18,6 +18,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<!-- <version>6.0.6</version> -->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-generator -->
 		<dependency>
