--- a/bmall-product/src/main/resources/application.properties
+++ b/bmall-product/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 # if config sever can't use we can use it instead
-
-# user config
 server.port=8003
 spring.application.name=service-product
-eureka.client.serviceUrl.defaultZone=http://106.12.204.95:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.1.11:8761/eureka/
 mybatis-plus.mapper-locations=classpath:/mybatis/*.xml
 mybatis-plus.type-handlers-package=cn.yh.pojo.eumn
 mybatis-plus.type-aliases-package=cn.yh.pojo.product
@@ -23,9 +21,9 @@ druid.maxPoolPreparedStatementPerConnectionSize=20
 druid.filters=stat
 
 
-connection.url=jdbc:mysql://106.12.204.95:3306/mproduct?useUnicode=true&characterEncoding=utf8
+connection.url=jdbc:mysql://127.0.0.1:3306/m_product?useUnicode=true&characterEncoding=utf8
 connection.username=root
-connection.password=yuhang123wo
+connection.password=123456
 
 
 
