--- a/bmall-user/src/main/resources/bootstrap.properties
+++ b/bmall-user/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=user
+spring.application.name=service-user
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-spring.cloud.config.uri= http://localhost:8888/
+spring.cloud.config.uri= http://192.168.1.11:8888/
